// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal Проверка что модальное окно не отрендерено по умолчанию 1`] = `""`;

exports[`Modal Рендер окна с переданными пропсами 1`] = `
<div
  className="modal-window-wrapper"
>
  <div
    className="overlay"
    onClick={[Function]}
  />
  <div
    className="modal-window"
    style={
      Object {
        "maxWidth": "800px",
      }
    }
  >
    <div
      className="modal-window__header"
    >
      <h2>
        Создать вакансию
      </h2>
      <Button
        className={null}
        classname="modal-window__close-btn"
        color="purple"
        font="medium"
        fullWidth={false}
        onClick={[Function]}
        size="medium"
        type="button"
        variant="icon"
      >
        <CloseIcon />
      </Button>
    </div>
    <div
      className="modal-window__body"
    >
      <div>
        Custom children
      </div>
    </div>
    <div
      className="modal-window__footer"
    >
      <Button
        className={null}
        color="purple"
        font="large"
        fullWidth={false}
        onClick={[Function]}
        size="large"
        type="button"
        variant="solid"
      >
        Создать
      </Button>
      <Button
        className={null}
        color="purple"
        font="medium"
        fullWidth={false}
        onClick={[Function]}
        size="large"
        type="button"
        variant="outlined"
      >
        Отменить
      </Button>
    </div>
  </div>
</div>
`;

exports[`Modal Рендер окна с пропсами по умолчанию 1`] = `
<div
  className="modal-window-wrapper"
>
  <div
    className="overlay"
    onClick={[Function]}
  />
  <div
    className="modal-window"
    style={
      Object {
        "maxWidth": "600px",
      }
    }
  >
    <div
      className="modal-window__header"
    >
      <h2>
        Сформировать приказ
      </h2>
      <Button
        className={null}
        classname="modal-window__close-btn"
        color="purple"
        font="medium"
        fullWidth={false}
        onClick={[Function]}
        size="medium"
        type="button"
        variant="icon"
      >
        <CloseIcon />
      </Button>
    </div>
    <div
      className="modal-window__body"
    />
    <div
      className="modal-window__footer"
    >
      <Button
        className={null}
        color="purple"
        font="large"
        fullWidth={false}
        onClick={[Function]}
        size="large"
        type="button"
        variant="solid"
      >
        Отправить
      </Button>
      <Button
        className={null}
        color="purple"
        font="medium"
        fullWidth={false}
        onClick={[Function]}
        size="large"
        type="button"
        variant="outlined"
      >
        Отменить
      </Button>
    </div>
  </div>
</div>
`;
